[package]
name = "matchmaking-function"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tokio = {version = "1", features = ["rt-multi-thread", "macros"] }
prost-types = "0.14.3"
tokio-stream = "0.1.18"
anyhow = "1.0.102"
uuid = {version = "1.23.0", features = ["v4"]}
tonic-reflection = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost", "prost-types"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
todo = "warn"
cast_lossless = "warn"
cognitive_complexity = "warn"
